Update 0.5 scci fix
コマンドラインからSCCIデバイスが正常に起動されない不具合を修正
最新版のSCCI(2019/07/28)を同梱
SCCIデバイスのYM2203に正式対応

--- a/package/index.html
+++ b/package/index.html
@@ -38,7 +38,7 @@ The original MUCOM88 disk images are also available at <a href="https://www.anci
 <BR>
 <B>MUCOM88 Windows</B>は、MUCOM88をWindows上で動作させるためのシステムです。コマンドライン版、GUI版の両方が用意されています。PC-8801のBIOSやディスクイメージは必要ありません。
 <BR>
-外部接続されたYM2608実チップを、<a href="http://www.pyonpyon.jp/~gasshi/fm/scci.html" target="_blank">SCCIを経由して</a>再生することが可能です。
+外部接続されたYM2608またはYM2203の実チップを、<a href="http://www.pyonpyon.jp/~gasshi/fm/scci.html" target="_blank">SCCIを経由して</a>再生することが可能です。
 <BR>
 以下のリンクから最新版のアーカイブをダウンロードすることができます。<br>(Windows以外のプラットフォーム対応については、<a href="https://github.com/onitama/mucom88" target="_blank">Githubリポジトリ</a>を参照ください)
 
@@ -96,7 +96,7 @@ The original MUCOM88 disk images are also available at <a href="https://www.anci
 PRODUCT INFO
 
 Name        : MUCOM88 Windows
-Version     : Ver0.46 ( MUCOM88 Ver1.7a )
+Version     : Ver0.5 ( MUCOM88 Ver1.7a )
 Platform    : Windows 7 or later
 Copyright   : 
 OpenMucom88 Ver.1.7 Copyright 1987-2019(C) Yuzo Koshiro
