--- a/package/index_en.html
+++ b/package/index_en.html
@@ -27,7 +27,7 @@ Open MUCOM 88 is a project to utilize open source based on MUCOM88 source code o
 MUCOM 88 Windows is a system for running MUCOM88 on Windows. Both the command line version and the GUI version are prepared.
 "MUCOM88" and "MUCOM88 Windows" released in <a href="https://www.youtube.com/watch?v=4Faeu-S9HwA" target="_blank">OBSLive year-end live broadcast</a> in 2018.
 The original MUCOM88 disk images are also available at <a href="https://www.ancient.co.jp/~mucom88/" target="_blank">Ancient's site</a>.
-The externally connected YM2608 real chip can be played back via SCCI.
+The externally connected YM2608/YM2203 real chip can be played back via SCCI.
 You can download the latest archive from the link below.
 (Please refer to the Github repository for non-Windows platforms)
 </PRE>
@@ -77,7 +77,7 @@ If you are concerned, please refer to the <a href="https://www.virustotal.com/ja
 PRODUCT INFO
 
 Name        : MUCOM88 Windows
-Version     : Ver0.46 ( MUCOM88 Ver1.7a )
+Version     : Ver0.5 ( MUCOM88 Ver1.7a )
 Platform    : Windows 7 or later
 Copyright   : 
 OpenMucom88 Ver.1.7 Copyright 1987-2019(C) Yuzo Koshiro
