--- a/package/index_en.html
+++ b/package/index_en.html
@@ -77,10 +77,10 @@ If you are concerned, please refer to the <a href="https://www.virustotal.com/ja
 PRODUCT INFO
 
 Name        : MUCOM88 Windows
-Version     : Ver0.5 ( MUCOM88 Ver1.7a )
+Version     : Ver0.51 ( MUCOM88 Ver1.7c )
 Platform    : Windows 7 or later
 Copyright   : 
-OpenMucom88 Ver.1.7 Copyright 1987-2019(C) Yuzo Koshiro
+OpenMucom88 Ver.1.7 Copyright 1987-2020(C) Yuzo Koshiro
 Z80 emulation by Yasuo Kuwahara 2002-2018(C)
 FM Sound Generator by cisc 1998, 2003(C)
 SCCI system / adpcm converter by gasshi 2018(C)
