Fix linux compilation

--- a/package/index_en.html
+++ b/package/index_en.html
@@ -51,12 +51,12 @@ In addition, performance via the actual FM sound source chip (YM2608) is support
 Detailed explanation about MUCOM88 Windows and MML reference are provided in Open MUCOM88 WiKi.<BR>
 Please see the following URL on your web browser.
 </P><PRE>
-	<A HREF="https://github.com/onitama/mucom88/wiki/MUCOM88-Windows%E3%81%AB%E3%81%A4%E3%81%84%E3%81%A6" target="_blank">https://github.com/onitama/mucom88/wiki/MUCOM88-Windows%E3%81%AB%E3%81%A4%E3%81%84%E3%81%A6</A>
+	<A HREF="https://github.com/onitama/mucom88/wiki/About-MUCOM88-Windows" target="_blank">https://github.com/onitama/mucom88/wiki/About-MUCOM88-Windows</A>
 </PRE><P>
 The latest information on MUCOM88 Windows and file downloads are available at the following site.
 </P><PRE>
 	MUCOM88 Windows
-	<A HREF="https://onitama.tv/mucom88/" target="_blank">https://onitama.tv/mucom88/</A>
+	<A HREF="https://onitama.tv/mucom88/index_en.html" target="_blank">https://onitama.tv/mucom88/index_en.html</A>
 </PRE><P>
 The disk image of the original PC-8801 version MUCOM88 is also available on the Ancient's website.
 </P><PRE>
@@ -77,7 +77,7 @@ If you are concerned, please refer to the <a href="https://www.virustotal.com/ja
 PRODUCT INFO
 
 Name        : MUCOM88 Windows
-Version     : Ver0.52 ( MUCOM88 Ver1.7c )
+Version     : Ver0.54 ( MUCOM88 Ver1.7c )
 Platform    : Windows 7 or later
 Copyright   : 
 OpenMucom88 Ver.1.7 Copyright 1987-2020(C) Yuzo Koshiro
@@ -113,12 +113,12 @@ License     : CC BY-NC-SA 4.0
 
 
 <tr><td width="100%" class="m"><b>
-<a href="https://github.com/onitama/mucom88/wiki/MUCOM88-Windows%E3%81%AB%E3%81%A4%E3%81%84%E3%81%A6" target="_blank">About MUCOM88 Windows</a>
+<a href="https://github.com/onitama/mucom88/wiki/About-MUCOM88-Windows" target="_blank">About MUCOM88 Windows</a>
 </b><br>
 </td></tr>
 
 <tr><td width="100%" class="m"><b>
-<a href="https://github.com/onitama/mucom88/wiki/MML%E3%83%AA%E3%83%95%E3%82%A1%E3%83%AC%E3%83%B3%E3%82%B9" target="_blank">MML Reference</a>
+<a href="https://github.com/onitama/mucom88/wiki/MMLReference" target="_blank">MML Reference</a>
 </b><br>
 </td></tr>
 
