Update MUCOM88 Windows to 0.56

--- a/package/index.html
+++ b/package/index.html
@@ -38,7 +38,7 @@ The original MUCOM88 disk images are also available at <a href="https://www.anci
 <BR>
 <B>MUCOM88 Windows</B>は、MUCOM88をWindows上で動作させるためのシステムです。コマンドライン版、GUI版の両方が用意されています。PC-8801のBIOSやディスクイメージは必要ありません。
 <BR>
-外部接続されたYM2608またはYM2203の実チップを、<a href="http://www.pyonpyon.jp/~gasshi/fm/scci.html" target="_blank">SCCIを経由して</a>再生することが可能です。
+外部接続されたYM2608またはYM2203の実チップを、SCCIを経由して再生することが可能です。
 <BR>
 以下のリンクから最新版のアーカイブをダウンロードすることができます。<br>(Windows以外のプラットフォーム対応については、<a href="https://github.com/onitama/mucom88" target="_blank">Githubリポジトリ</a>を参照ください)
 
@@ -67,7 +67,7 @@ The original MUCOM88 disk images are also available at <a href="https://www.anci
 	Open MUCOM88 WiKiにて提供されています。<BR>
 	WEBブラウザで、以下のURLをご覧ください。
 </P><PRE>
-	<A HREF="https://github.com/onitama/mucom88/wiki/MUCOM88-Windows%E3%81%AB%E3%81%A4%E3%81%84%E3%81%A6" target="_blank">https://github.com/onitama/mucom88/wiki/MUCOM88-Windows%E3%81%AB%E3%81%A4%E3%81%84%E3%81%A6</A>
+	<A HREF="https://github.com/onitama/mucom88/wiki" target="_blank">https://github.com/onitama/mucom88/wiki</A>
 </PRE><P>
 	MUCOM88 Windowsの最新情報及び、ファイルのダウンロードは
 	以下のサイトにて行っています。
@@ -96,14 +96,14 @@ The original MUCOM88 disk images are also available at <a href="https://www.anci
 PRODUCT INFO
 
 Name        : MUCOM88 Windows
-Version     : Ver0.54 ( MUCOM88 Ver1.7c )
+Version     : Ver0.56 ( MUCOM88 Ver1.7c )
 Platform    : Windows 7 or later
 Copyright   : 
 OpenMucom88 Ver.1.7 Copyright 1987-2020(C) Yuzo Koshiro
 Z80 emulation by Yasuo Kuwahara 2002-2018(C)
 FM Sound Generator by cisc 1998, 2003(C)
 SCCI system / adpcm converter by gasshi 2018(C)
-Windows version by ONION software/onitama 2018-2019(C)
+Windows version by ONION software/onitama 2018-2024(C)
 License     : CC BY-NC-SA 4.0
 </pre>
 </div>
@@ -148,11 +148,6 @@ License     : CC BY-NC-SA 4.0
 
 <tr><td width="100%" class="m"><b>
 <a href="https://www.ancient.co.jp/~mucom88/" target="_blank">MUCOM88ディスクイメージ</a>
-</b><br>
-</td></tr>
-
-<tr><td width="100%" class="m"><b>
-<a href="http://www.pyonpyon.jp/~gasshi/fm/scci.html" target="_blank">Sound Chip Common Interface</a>
 </b><br>
 </td></tr>
 
